Added: - Game, spawning bullets

--- a/LightYearsGame/CMakeLists.txt
+++ b/LightYearsGame/CMakeLists.txt
@@ -13,6 +13,9 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
 
 	${CMAKE_CURRENT_SOURCE_DIR}/include/weapon/BulletShooter.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/weapon/BulletShooter.cpp
+
+	${CMAKE_CURRENT_SOURCE_DIR}/include/weapon/Bullet.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/weapon/Bullet.cpp
 )
 
 target_include_directories(${LIGHT_YEARS_GAME_TARGET_NAME} PUBLIC 
