--- a/LightYearsEngine/CMakeLists.txt
+++ b/LightYearsEngine/CMakeLists.txt
@@ -28,6 +28,9 @@ add_library(${LIGHT_YEARS_ENGINE_TARGET_NAME} STATIC
 
 	${CMAKE_CURRENT_SOURCE_DIR}/include/framework/Actor.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/framework/Actor.cpp
+
+	${CMAKE_CURRENT_SOURCE_DIR}/include/VFX/Particle.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/VFX/Particle.cpp
 )
 
 target_include_directories(${LIGHT_YEARS_ENGINE_TARGET_NAME} PUBLIC
