--- a/LightYearsEngine/CMakeLists.txt
+++ b/LightYearsEngine/CMakeLists.txt
@@ -34,6 +34,9 @@ add_library(${LIGHT_YEARS_ENGINE_TARGET_NAME} STATIC
 
 	${CMAKE_CURRENT_SOURCE_DIR}/include/VFX/Particle.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/VFX/Particle.cpp
+
+	${CMAKE_CURRENT_SOURCE_DIR}/include/gameplay/GameStage.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/gameplay/GameStage.cpp
 )
 
 target_include_directories(${LIGHT_YEARS_ENGINE_TARGET_NAME} PUBLIC
