--- a/LightYearsGame/CMakeLists.txt
+++ b/LightYearsGame/CMakeLists.txt
@@ -29,8 +29,13 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
 	${CMAKE_CURRENT_SOURCE_DIR}/include/enemy/Vanguard.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/enemy/Vanguard.cpp
 
+	${CMAKE_CURRENT_SOURCE_DIR}/include/enemy/VanguardStage.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/enemy/VanguardStage.cpp
+
 	${CMAKE_CURRENT_SOURCE_DIR}/include/level/GameLevelOne.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/level/GameLevelOne.cpp
+
+	
 )
 
 target_include_directories(${LIGHT_YEARS_GAME_TARGET_NAME} PUBLIC 
