--- a/LightYearsGame/CMakeLists.txt
+++ b/LightYearsGame/CMakeLists.txt
@@ -32,11 +32,17 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
 	${CMAKE_CURRENT_SOURCE_DIR}/include/enemy/TwinBlade.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/enemy/TwinBlade.cpp
 
+	${CMAKE_CURRENT_SOURCE_DIR}/include/enemy/Hexagon.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/enemy/Hexagon.cpp
+
 	${CMAKE_CURRENT_SOURCE_DIR}/include/enemy/VanguardStage.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/enemy/VanguardStage.cpp
 
 	${CMAKE_CURRENT_SOURCE_DIR}/include/enemy/TwinBladeStage.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/enemy/TwinBladeStage.cpp
+
+	${CMAKE_CURRENT_SOURCE_DIR}/include/enemy/HexagonStage.h
+	${CMAKE_CURRENT_SOURCE_DIR}/src/enemy/HexagonStage.cpp
 
 	${CMAKE_CURRENT_SOURCE_DIR}/include/level/GameLevelOne.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/level/GameLevelOne.cpp
